...
    case nothing
    // --------------------------
    case commonAdd
    case commonAppName
    case commonAppNameInitials
    case commonBasicSettings
    case commonCancel
    case commonClose
    case commonDelete
    case commonDosage
    case commonEgString
    case commonEmptyView
    case commonExampleDosage
...
    case commonOK
    case commonMedications
    case commonNoDate
    case commonNotTakenYet
    case commonPleaseSelect
    case commonPleaseAdd
    case commonSave
    case commonSort
    case commonYes
    // --------------------------
    case validationTwoLetters
    case validationOneOrAbove
    case validationMustSpecify
...
    case medsMedications
    case medsSorryUsed
    case medsPleaseSelect
    // --------------------------
    case medEditAdvancedExpandedAID
    case medEditTitleLabelAID
    case medEditTitleText
    case medEditGapInfo
    case medEditAddMed
    case medEditDeleteAreYouSure
    case medEditDeleteHistoryAreYouSure
    case medEditColour
    case medEditCopyThisMed
...
